Fix #32338: particle instance modifier did not work well when the mesh had only vertices. Previously it would hide particles by creating invalid faces, but this didn't make the vertices actually disappear.

Also found that it could generated corrupt geometry for cases with faces, which
gave wrong subsurf and could crash in edit mode.